--- a/nginx/infra-kytes.conf
+++ b/nginx/infra-kytes.conf
@@ -1,1 +1,27 @@
-# fichier
+# upstream chat{
+# #   ip_hash;
+#   server rocketchat:3000;
+# }
+
+
+server {
+  listen 80;
+  server_name gitlab.kytes.io;
+  error_log /var/log/nginx/gitlab.error.log;
+
+  location / {
+    proxy_pass http://kytes_gitlab_service:8083/;
+
+    proxy_set_header Host $http_host;
+
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
+    # proxy_set_header X-Forward-Proto http;
+    proxy_set_header X-Forward-Proto $scheme;
+    # proxy_set_header X-Nginx-Proxy true;
+
+    proxy_redirect off;
+    # proxy_redirect on;
+
+  }
+}
