--- a/nginx/infra-kytes.conf
+++ b/nginx/infra-kytes.conf
@@ -10,6 +10,7 @@ server {
   error_log /var/log/nginx/gitlab.error.log;
 
   location / {
+    # "kytes_gitlab_service" : doit correspondre au container_name déclaré dans le docker-compose.yml / template ansible
     proxy_pass http://kytes_gitlab_service:8083/;
 
     proxy_set_header Host $http_host;
