--- a/.env
+++ b/.env
@@ -1,38 +1,36 @@
-# + cf. "Riptide"
-NOM_DU_ROBOT_HUBOT_ROCKETCHAT=bozinsky
-UTILISATEUR_ROCKETCHAT_HUBOT=yoomabot
-UTILISATEUR_ROCKETCHAT_HUBOT_MDP=vinse
-CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
-USERNAME_UTILISATEUR_ADMIN_INITIAL=jibjib
-# L'utilisateur initial, n'est plus l'utiliateur RocketChat que HUBOT utilise: il créée l'utilisateur utilisé par HUBOT
-MDP_UTILISATEUR_ADMIN_INITIAL=superjib
-EMAIL_UTILISATEUR_ADMIN_INITIAL=superjib@jbl.io
-UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@kytes.io
-NUMERO_PORT_ECOUTE_REVERSE_PROXY=8090
-NOM_CONTENEUR_ROCKETCHAT=rocketchat
-NOM_CONTENEUR_GITLAB=marguerite_gitlab_service
-# - Comme toutes les applications développées avec le framwork Meteor, par défaut, le port d'écoute est le port 3000.
-NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
+# + cf. "Kytes"
+
+# -- KYTES --
+KYTES_USERNAME_UTILISATEUR_ADMIN_INITIAL=superjbl
+KYTES_MDP_UTILISATEUR_ADMIN_INITIAL=mdpsuperjbl
+KYTES_EMAIL_UTILISATEUR_ADMIN_INITIAL=superjbl@kytes.io
+
+
+# + la "apiKey" Gitlab, qui doit être utilisée parle XXX, pour accéder à un compte Gitlab (et effectuer des créations de repo Gits, pour les process fleuris.) 
+KYTES_GITLAB_API_KEY=jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69
+KYTES_GITLAB_TOKEN=cNhsExCcNhsExicNhsExx
+
+
+# -- CIBLE DEPLOIMENT --
+# - L'adresse IP de l'Hôte Docker, cible du dpéloiement de cette recette 
 ADRESSE_IP_HOTE_DOCKER=192.168.1.29
-# + la "apiKey" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
-HUBOT_GITLAB_API_KEY=jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69
-HUBOT_GITLAB_TOKEN=cNhsExCcNhsExicNhsExx
+NOM_DU_RESEAU_INFRA_DOCKER=devops
+NOM_CONTENEUR_GITLAB=kytes_gitlab_service
+
+
+# -- NGINX --
+# NGINX_PROXY_NETWORK_NAME=nginxproxy_default
+NUMERO_PORT_ECOUTE_REVERSE_PROXY=80
 
 # -- GITLAB --
 # https://hub.docker.com/r/gitlab/gitlab-ce/tags/
 GITLAB_CE_VERSION=11.2.1-ce.0
 # https://hub.docker.com/r/gitlab/gitlab-runner/tags/
-GITLAB_RUNNER_VERSION=alpine-v11.2.0
+# GITLAB_RUNNER_VERSION=alpine-v11.2.0
 POSTGRES_VERSION=9.6.8-alpine
 REDIS_VERSION=3-alpine
-
-# NGINX_PROXY_NETWORK_NAME=nginxproxy_default
-NOM_DU_RESEAU_INFRA_DOCKER=devops
 GITLAB_HOST=gitlab.marguerite.io
 # GITLAB_HOST=http://gitlab.marguerite.io:8083/
-
-# -->> Pour configurer Un registry Docker utilisable par Gitlab?
-# REGISTRY_HOST=registry.mydomain.io
 GITLAB_SSH_IP=0.0.0.0
 GITLAB_SSH_PORT=2222
 GITLAB_HTTP_IP=0.0.0.0
@@ -41,15 +39,16 @@ GITLAB_HTTPS_IP=0.0.0.0
 GITLAB_HTTPS_PORT=9443
 # - GITLAB_TRUSTED_PROXY ...??? Kezako? cf. https://docs.gitlab.com/omnibus/docker/
 # GITLAB_TRUSTED_PROXY=172.18.0.0/16
+
+# -- LETS ENCRYPT -- 
 LETSENCRYPT_EMAIL=contact@mydomain.io
+
+# -- TIME ZONES, CULTURES, & LANGUAGES
 TZ=Europe/Paris
 
-# -- IMAGES DOCKER
+
+# -- VERSIONS IMAGES DOCKER -- 
 # + À noter : ces variables d'envrionnement sont utilisée à la fois dans le docker-compose.yml, et dans les fichiers Dockerfile
 VERSION_IMAGE_CENTOS=centos:7
-VERSION_IMAGE_MONGO=mongo:latest
 # VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:$GITLAB_CE_VERSION
-# VERSION_IMAGE_GITLAB_RUNNER=gitlab/gitlab-runner:$GITLAB_RUNNER_VERSION
-VERSION_IMAGE_ROCKETCHAT=rocketchat/rocket.chat:latest
-VERSION_IMAGE_HUBOT_ROCKETCHAT=rocketchat/hubot-rocketchat:latest
 VERSION_IMAGE_NGINX=nginx:latest
