--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,74 @@
 version: '3'
 
 services:
-  # Pour la conf gitlab + runner + postgres + redis => cf [https://github.com/mgcrea/docker-compose-gitlab-ce], many
+  # Pour la conf gitlab + runner + postgres + rredis => cf [https://github.com/mgcrea/docker-compose-gitlab-ce], many
   # thanks to Olivier ;) https://github.com/mgcrea
   gitlab:
-    image: gitlab/gitlab-ce:${GITLAB_CE_VERSION}
+    image: coquelicot/gitlab-ce:${GITLAB_CE_VERSION}
     restart: always
     container_name: "$NOM_CONTENEUR_GITLAB"
-    hostname: "gitlab.kytes.io"
+    hostname: "$HOTE_RESEAU_GITLAB"
+    build: 
+      context: ./gitlab/
+      args:
+        # - HEALTHCHECK BUILD ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
+        # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
+        - VERSION_IMAGE_GITLAB_CE=$GITLAB_CE_VERSION
+        - GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB=$GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB
     environment:
-      GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://gitlab.kytes.io:8083/'
-        gitlab_rails['lfs_enabled'] = true
+      - TZ=${TZ}
+      - VERSION_IMAGE_GITLAB_CE=$GITLAB_CE_VERSION
+      - GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB=$GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB
+      # Ces varibles sont utilisées par les fonctionnalités développées par léquipe Gitlab 
+      # - pour la partie serveur SSH, je laisse les valeurs par défaut s'appliquer
+      # - GITLAB_SSH_IP=$GITLAB_SSH_IP
+      # - GITLAB_SSH_PORT=$GITLAB_SSH_PORT
+      # - pour la partie HTTP, je laisse la valeur par défaut s'appliqeur quant  à l'adresse IP, et je fixe le numéro de port au numéro de port utilisé en interne du conteneur, par le contenur gitlab, via le serveur nginx dans le même conteneur. 
+      # - GITLAB_HTTP_IP=$GITLAB_HTTP_IP
+      # - VIRTUAL_HOST=${HOTE_RESEAU_GITLAB}
+      # - VIRTUAL_PORT=$GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB
+      # - GITLAB_HTTP_PORT=$GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB
+      # si cette variable d'envirionnement n'est pas déclarée, alors on a des erreurs 404 avec certaines fonctionnalités, qui font donc usage de cette variable d'environnement, pour trouver le "CI server" de Gitlab, par exemple ...
+      # - GITLAB_HOST=$HOTE_RESEAU_GITLAB
+      # - GITLAB_OMNIBUS_CONFIG="external_url 'http://$HOTE_RESEAU_GITLAB:$GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB/'; gitlab_rails['lfs_enabled'] = true"
+   # + utilisation du fichier de préconfiguration `./gitlab/config/gitlab.rb`
+#       - GITLAB_OMNIBUS_CONFIG="external_url 'http://gitab.marguerite.io:8085/'; gitlab_rails['lfs_enabled'] = true; nginx['listen_port'] = 8085; gitlab_rails['gitlab_ssh_port'] = 2222"
+#     environment:
+#       GITLAB_OMNIBUS_CONFIG: |
+#         external_url 'http://gitlab.marguerite.io:$GITLAB_HTTP_PORT_THROUGH_INTERNAL_NGINX/'
+#         gitlab_rails['lfs_enabled'] = true
     ports:
-      # 0.0.0.0 : 8081 : 80 
-      - ${GITLAB_HTTP_IP}:${GITLAB_HTTP_PORT}:80
+      # 0.0.0.0 : 8084 : 8083
+      # Le serveur NGINX à l'intérieur du conteneur Gitlab, écoute sur le port 80...???
+      - ${GITLAB_HTTP_IP}:${GITLAB_HTTP_PORT_DEPUIS_EXTERIEUR_CONTENEUR_DOCKER}:${GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB}
       - ${GITLAB_HTTPS_IP}:${GITLAB_HTTPS_PORT}:443
       - ${GITLAB_SSH_IP}:${GITLAB_SSH_PORT}:22
+    expose:
+#     # Le serveur NGINX à l'intérieur du conteneur Gitlab, écoute sur le port 80...
+#       - 80
+      - ${GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB}
+      - 443
+      - 22
     volumes:
+      # + utilisation du fichier de préconfiguration `./gitlab/config/gitlab.rb` // j'ia un problème de droits avec ce répertoire, je vais être obligé de recourir au dockerfile
       - ./gitlab/config:/etc/gitlab
       - ./gitlab/logs:/var/log/gitlab
       - ./gitlab/data:/var/opt/gitlab
     depends_on:
       - redis
       - postgres
+    networks:
+      - "$NOM_DU_RESEAU_INFRA_DOCKER"
+      
+  runner:
+    image: gitlab/gitlab-runner:${GITLAB_RUNNER_VERSION}
+    restart: always
+    container_name: gitlab_runner
+    environment:
+      - CI_SERVER_URL=https://${HOTE_RESEAU_GITLAB}/
+    volumes:
+      - ./gitlab/runner:/etc/gitlab-runner:rw
+      - /var/run/docker.sock:/var/run/docker.sock:rw
     networks:
       - "$NOM_DU_RESEAU_INFRA_DOCKER"
  
@@ -52,18 +97,101 @@ services:
     restart: always
     networks:
       - "$NOM_DU_RESEAU_INFRA_DOCKER"
+
+
+  mongo:
+    # image: mongo:latest
+    image: marguerite/mongo:1.0.0    
+    build: ./mongodb/construction/
+    # hostname: "mongo"
+    container_name: 'mongo'
     volumes:
-      - ./hubot/scripts:/home/hubot/scripts:rw
+     - ./db/data:/data/db
+     - ./db/dump:/dump
+    command: mongod --smallfiles --oplogSize 128 --replSet rs0
     expose:
-      - 3001
+      - "27017"
     ports:
-      - 3001:3001
-    # this is used to expose the hubot port for notifications on the host on port 3001, e.g. for hubot-jenkins-notifier
+      - 27017:27017
     networks:
       - "$NOM_DU_RESEAU_INFRA_DOCKER"
+#       devops:
+#         ipv4_address: 192.168.160.6
+    
+  mongo-init-replica:
+    # image: mongo:3.2
+    image: marguerite/mongo-replica-initializer:1.0.0
+    build: ./mongo-init-replica/construction/
+    container_name: 'mongo-init-replica'
+    # + Pour que le conteneur reste UP ' N 'RUNNING, y compris lorsque le replicaSet a été créé avec succès, et
+    # + le HEALTHCHECK est joué après le succès pour exposer un statut "healthy", ce
+    # + qui déclenche le démarrage du conteneur RocketChat => plus nécessaire, depuis restart onfailure
+    # tty: true
+    # + il FAUDRA remplacer ce sleep par une meilleure solution
+    # command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})"'
+    # command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''mongo:27017'' } ]})"'
+    # 
+    # + Note : 
+    # + on pourra ajouter une varible d'environnement à cette image custom, qui permettra de préciser le nom du
+    # + replica Set à initialiser, et d'autres variables d'environnement, pour préciser une
+    # + éventuelle configuration du replicaSet
+    # 
+#     environment:
+#       - REPLICASET_NAME: ""
+#       - REPLICASET_CONF_PARAM_1: ""
+#       - REPLICASET_CONF_PARAM_2: ""
+    networks:
+      - "$NOM_DU_RESEAU_INFRA_DOCKER"
+#     expose:
+#       - 27017
     depends_on:
-      # + le prochain palier de remontée du plongueur, cf. HEALTHCHECK rocketchat
-      - gitlab
+      - mongo
+    # + Pour qu'il re-démarre, tant qu'il n'a pas réussit à initialiser le replicaSet
+    restart: on-failure:40
+    # restart: always
+  rocketchat:
+    container_name: "$NOM_CONTENEUR_ROCKETCHAT"
+    image: coquelicot/rocket.chat:1.0.0
+    build: 
+      context: ./rocketchat/construction/
+      args:
+        # - HEALTHCHECK BUILD ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
+        # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
+        - UTILISATEUR_ROCKETCHAT_HUBOT=$UTILISATEUR_ROCKETCHAT_HUBOT
+        - UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+        - CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
+        - ADMIN_USERNAME=$USERNAME_UTILISATEUR_ADMIN_INITIAL 
+        - ADMIN_PASS=$MDP_UTILISATEUR_ADMIN_INITIAL" 
+        - ADMIN_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
+#     hostname: 'rocketchat'
+
+    volumes:
+      - ./rocketchat/uploads:/app/uploads:rw
+    environment:
+      - PORT=$NUMERO_PORT_ECOUTE_ROCKETCHAT
+      - ROOT_URL=http://rocketchat.marguerite.io:$NUMERO_PORT_ECOUTE_REVERSE_PROXY
+      - MONGO_URL=mongodb://mongo:27017/rocketchat
+      - MONGO_OPLOG_URL=mongodb://mongo:27017/local?replicaSet=rs0
+      - MAIL_URL=smtp://smtp.google.com
+      - ADMIN_USERNAME=$USERNAME_UTILISATEUR_ADMIN_INITIAL
+      - ADMIN_PASS=$MDP_UTILISATEUR_ADMIN_INITIAL
+      - ADMIN_EMAIL=$EMAIL_UTILISATEUR_ADMIN_INITIAL
+    ports:
+      - 3030:$NUMERO_PORT_ECOUTE_ROCKETCHAT
+    expose:
+      - "$NUMERO_PORT_ECOUTE_ROCKETCHAT"
+    depends_on:
+      - mongo
+      # + Depuis utilisation d'un build image custom mongo avec HEALTHCHECK pour le
+      # + conteneur 'mongo-init-replica', cf. ./mongo-init-replica/construction/replicaset-health-check
+      # + mais plus depusi l'avènement du soudeur
+      # - mongo-init-replica
+    networks:
+      - "$NOM_DU_RESEAU_INFRA_DOCKER"
+#       devops:
+#         ipv4_address: 192.168.160.8
+    restart: always
+    
   nginx:
     image: nginx
 #     hostname: "proxy"
