--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -205,7 +205,7 @@ services:
 #       - ./nginx/hosts:/etc/hosts
       - ./nginx/logs:/var/log/nginx:rw
 #      - ./nginx/certificates:/etc/nginx/certificates/
-- ./nginx/jenkins.conf:/etc/nginx/conf.d/
+      # - ./nginx/jenkins.conf:/etc/nginx/conf.d/
     ports:
       - "80:8030"
       - "443:7443"
