--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -12,11 +12,13 @@ FROM rocketchat/rocket.chat:latest
 
 # And....
 # There you go.
-ARG UTILISATEUR_ROCKETCHAT_HUBOT
-ENV UTILISATEUR_ROCKETCHAT_HUBOT=$UTILISATEUR_ROCKETCHAT_HUBOT
+#         - UTILISATEUR_ROCKETCHAT_JOUEUR=$UTILISATEUR_ROCKETCHAT_JOUEUR
+#         - UTILISATEUR_ROCKETCHAT_JOUEUR_MDP=$UTILISATEUR_ROCKETCHAT_JOUEUR_MDP
+ARG UTILISATEUR_ROCKETCHAT_JOUEUR
+ENV UTILISATEUR_ROCKETCHAT_JOUEUR=$UTILISATEUR_ROCKETCHAT_JOUEUR
 
-ARG UTILISATEUR_ROCKETCHAT_HUBOT_MDP
-ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+ARG UTILISATEUR_ROCKETCHAT_JOUEUR_MDP
+ENV UTILISATEUR_ROCKETCHAT_JOUEUR_MDP=$UTILISATEUR_ROCKETCHAT_JOUEUR_MDP
 
 ARG CHATROOM_ROCKETCHAT_HUBOT
 ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
