--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ POSTGRES_VERSION=9.6.8-alpine
 REDIS_VERSION=3-alpine
 HOTE_RESEAU_GITLAB=gitlab.kytes.io
 GITLAB_HOST=gitlab.kytes.io
-# GITLAB_HOST=http://gitlab.marguerite.io:8083/
+# GITLAB_HOST=http://gitlab.kytes.io:8083/
 GITLAB_SSH_IP=0.0.0.0
 GITLAB_SSH_PORT=2222
 GITLAB_HTTP_IP=0.0.0.0
@@ -49,9 +49,9 @@ GITLAB_HTTPS_PORT=9443
 # - GITLAB_TRUSTED_PROXY ...??? Kezako? cf. https://docs.gitlab.com/omnibus/docker/
 # GITLAB_TRUSTED_PROXY=172.18.0.0/16
 # - lorsque l'on utilise gitlab comme un registry docker
-# REGISTRY_HOST=docker.marguerite.io
+# REGISTRY_HOST=docker.kytes.io
 # - ça, je pense que ce sont les "pages" , du wiki ou du "gist" - like (cf. github / gist pages)
-PAGES_HOST=pages.marguerite.io
+PAGES_HOST=pages.kytes.io
 # La valeur de "GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB" est dupliquée, et le sera par templatisation ansible, dans [./gitlab/gitlab.rb] 
 GITLAB_HTTP_PORT_VIA_NGINX_INTERNE_GITLAB=8089
 # le numéro de port utilisé pour la configuration du reverse proxy coquelicot, et pour le port externe du conteneur docker Gitlab (cf. ./docker-compose.yml, section 'ports:')
