--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -5,7 +5,7 @@
 
 server {
   listen 80;
-  server_name rocketchat.marguerite.io;
+  server_name rocketchat.kytes.io;
   error_log /var/log/nginx/rocketchat.error.log;
 
   location / {
@@ -28,12 +28,12 @@ server {
 
 server {
   listen 80;
-  server_name gitlab.marguerite.io;
+  server_name gitlab.kytes.io;
   error_log /var/log/nginx/gitlab.error.log;
 
 
   location / {
-    proxy_pass http://marguerite_gitlab_service:8083/;
+    proxy_pass http://kytes_gitlab_service:8083/;
 
     proxy_set_header Host $http_host;
 
