--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -1,14 +1,17 @@
 # upstream chat{
 # #   ip_hash;
 #   server rocketchat:3000;
-# }
+# }
 
 server {
-  listen 80;
-  server_name rocketchat.kytes.io;
+  listen 8070;
+  server_name rocketchat.marguerite.io;
   error_log /var/log/nginx/rocketchat.error.log;
 
   location / {
+    # pour test, j'use de numéros de port interne/externe du conteneur rocketchat, différents.
+    # proxy_pass http://rocketchat:3000/;
+    # Donc dans le docker-compose.yml, section "ports:",on trouvera  :  0.0.0.0:3030:3000, etpourant , je mappe sur 3000 dans le réseau interne bridge docker
     proxy_pass http://rocketchat:3000/;
     # proxy_http_version 1.1;
     # proxy_set_header Upgrade $http_upgrade;
@@ -27,13 +30,13 @@ server {
 
 
 server {
-  listen 80;
-  server_name gitlab.kytes.io;
+  listen 8070;
+  server_name gitlab.marguerite.io;
   error_log /var/log/nginx/gitlab.error.log;
 
 
   location / {
-    proxy_pass http://kytes_gitlab_service:8083/;
+    proxy_pass http://marguerite_gitlab_service:8089/;
 
     proxy_set_header Host $http_host;
 
@@ -42,7 +45,8 @@ server {
     # proxy_set_header X-Forward-Proto http;
     proxy_set_header X-Forward-Proto $scheme;
     # proxy_set_header X-Nginx-Proxy true;
-
+    # pour les authenticity token gitlab
+    # proxy_set_header X-Forwarded-Proto https;
     proxy_redirect off;
     # proxy_redirect on;
 
