--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -20,8 +20,8 @@ ENV UTILISATEUR_ROCKETCHAT_JOUEUR=$UTILISATEUR_ROCKETCHAT_JOUEUR
 ARG UTILISATEUR_ROCKETCHAT_JOUEUR_MDP
 ENV UTILISATEUR_ROCKETCHAT_JOUEUR_MDP=$UTILISATEUR_ROCKETCHAT_JOUEUR_MDP
 
-ARG CHATROOM_ROCKETCHAT_HUBOT
-ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
+# ARG CHATROOM_ROCKETCHAT_HUBOT
+# ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
 
 # RUN apt-get update -y && apt-get install -y curl
 
