--- a/nginx/gitlab.conf
+++ b/nginx/gitlab.conf
@@ -1,5 +1,6 @@
 server {
-  listen 8070;
+  # listen 8070;
+  listen 8030;
   server_name gitlab.kytes.io;
   error_log /var/log/nginx/gitlab.error.log;
 
