--- a/nginx/rocketchat.conf
+++ b/nginx/rocketchat.conf
@@ -4,7 +4,8 @@
 # }
 
 server {
-  listen 8070;
+  # listen 8070;
+  listen 8030;
   server_name rocketchat.kytes.io;
   error_log /var/log/nginx/rocketchat.error.log;
 
