--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,7 +107,7 @@ services:
     volumes:
      - ./db/data:/data/db
      - ./db/dump:/dump
-    # command: mongod --smallfiles --oplogSize 128 --replSet rs0
+    command: mongod --smallfiles --oplogSize 128 --replSet rs0
     ports:
       - 27017:27017
     expose:
