--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,9 @@ services:
       - 22
     volumes:
       # + utilisation du fichier de préconfiguration `./gitlab/config/gitlab.rb` // j'ia un problème de droits avec ce répertoire, je vais être obligé de recourir au dockerfile
-      - ./gitlab/config:/etc/gitlab
-      - ./gitlab/logs:/var/log/gitlab
-      - ./gitlab/data:/var/opt/gitlab
+      - ./gitlab/config:/etc/gitlab:rw
+      - ./gitlab/logs:/var/log/gitlab:rw
+      - ./gitlab/data:/var/opt/gitlab:rw
     depends_on:
       - redis
       - postgres
